[package]
authors = ["Bad Manners <me@badmanners.xyz>"]
description = "A few silly games I made while I learn about Axum, SSH (with Russh), and HTMX."
name = "htmx-ssh-games"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
axum = "0.7.5"
axum-macros = "0.4.1"
bitvec = "1.0.1"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
maud = { version = "0.26.0", features = ["axum"] }
rand = "0.8.5"
random_color = "0.8.0"
reqwest = "0.12.7"
russh = "0.45"
serde = { version = "1.0.210", features = ["derive"] }
termsize = "0.1.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net", "sync"] }
tokio-util = "0.7.11"
tower = "0.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "std"] }
